feat: add package builder